fix(layout): 3d transforms being weird on iOS

--- a/src/components/background/_background.scss
+++ b/src/components/background/_background.scss
@@ -11,5 +11,6 @@
   left: 0;
   background-size: cover;
   background-repeat: no-repeat;
-  z-index: -1;
+  z-index: 1;
+  transform: translate3d(0,0,0);
 }
