--- a/src/components/panel/_panel.scss
+++ b/src/components/panel/_panel.scss
@@ -9,18 +9,18 @@
   color: $color-white;
   border-radius: 4px;
   border: 1px solid rgba($color-black, 0.2);
-  backdrop-filter: blur(4px);
+  backdrop-filter: blur(3px);
 
   @include medium {
     position: absolute;
     width: calc(100% - 350px);
-
-    max-width: 800px;
     right: 4rem;
     top: 6rem;
     min-height: 500px;
     max-height: 800px;
-    transform: perspective(600px) rotateY(-20deg);
+    max-width: 800px;
+    transform: perspective(600px) rotateY(-20deg) rotateX(-1deg);
+    z-index: 1;
 
     &::before {
       position: absolute;
